# Bullseye

./: .gitignore  LICENSE  README.md  pyproject.toml
Playground/FacialRecognition/: knownReco.py  testOpenCV.py
Playground/FileTransfer/Client/: client.py
Servo/: control.py  controlServo.py  currentWidth.py
Source/: main.py
Source/Services/Server/: server.py
playground/file_transfer/client/: client.py
playground/file_transfer/server/: server.py
